cmake_minimum_required(VERSION 3.15)
project(nginx)

set(CMAKE_CXX_STANDARD 14)

include_directories(objs)
include_directories(src/core)
include_directories(src/event)
include_directories(src/event/modules)
include_directories(src/http)
include_directories(src/http/modules)
include_directories(src/http/modules/perl)
include_directories(src/http/v2)
include_directories(src/mail)
include_directories(src/os/unix)
include_directories(src/stream)
include_directories(/usr/local/opt/pcre/include)
include_directories(/usr/local/opt/openssl/include)
# lua module
include_directories(3rd/lua-nginx-module/api)
include_directories(3rd/lua-nginx-module/src)

add_executable(nginx
        objs/ngx_auto_config.h
        objs/ngx_auto_headers.h
        objs/ngx_modules.c
        # my modules
        3rd/my-module/nginx-flv-module/ngx_http_flv_module.c
        3rd/my-module/nginx-ncp3-module/ngx_stream_socks5_module.c
        3rd/my-module/nginx-http-testvariable-module/ngx_http_testvariable_module.c

        # lua module
        3rd/lua-nginx-module/src/ngx_http_lua_accessby.c
        3rd/lua-nginx-module/src/ngx_http_lua_api.c
        3rd/lua-nginx-module/src/ngx_http_lua_args.c
        3rd/lua-nginx-module/src/ngx_http_lua_balancer.c
        3rd/lua-nginx-module/src/ngx_http_lua_bodyfilterby.c
        3rd/lua-nginx-module/src/ngx_http_lua_cache.c
        3rd/lua-nginx-module/src/ngx_http_lua_capturefilter.c
        3rd/lua-nginx-module/src/ngx_http_lua_clfactory.c
        3rd/lua-nginx-module/src/ngx_http_lua_config.c
        3rd/lua-nginx-module/src/ngx_http_lua_consts.c
        3rd/lua-nginx-module/src/ngx_http_lua_contentby.c
        3rd/lua-nginx-module/src/ngx_http_lua_control.c
        3rd/lua-nginx-module/src/ngx_http_lua_coroutine.c
        3rd/lua-nginx-module/src/ngx_http_lua_ctx.c
        3rd/lua-nginx-module/src/ngx_http_lua_directive.c
        3rd/lua-nginx-module/src/ngx_http_lua_exception.c
        3rd/lua-nginx-module/src/ngx_http_lua_headerfilterby.c
        3rd/lua-nginx-module/src/ngx_http_lua_headers.c
        3rd/lua-nginx-module/src/ngx_http_lua_headers_in.c
        3rd/lua-nginx-module/src/ngx_http_lua_headers_out.c
        3rd/lua-nginx-module/src/ngx_http_lua_initby.c
        3rd/lua-nginx-module/src/ngx_http_lua_initworkerby.c
        3rd/lua-nginx-module/src/ngx_http_lua_input_filters.c
        3rd/lua-nginx-module/src/ngx_http_lua_lex.c
        3rd/lua-nginx-module/src/ngx_http_lua_log.c
        3rd/lua-nginx-module/src/ngx_http_lua_log_ringbuf.c
        3rd/lua-nginx-module/src/ngx_http_lua_logby.c
        3rd/lua-nginx-module/src/ngx_http_lua_misc.c
        3rd/lua-nginx-module/src/ngx_http_lua_module.c
        3rd/lua-nginx-module/src/ngx_http_lua_ndk.c
        3rd/lua-nginx-module/src/ngx_http_lua_output.c
        3rd/lua-nginx-module/src/ngx_http_lua_pcrefix.c
        3rd/lua-nginx-module/src/ngx_http_lua_phase.c
        3rd/lua-nginx-module/src/ngx_http_lua_pipe.c
        3rd/lua-nginx-module/src/ngx_http_lua_regex.c
        3rd/lua-nginx-module/src/ngx_http_lua_req_body.c
        3rd/lua-nginx-module/src/ngx_http_lua_rewriteby.c
        3rd/lua-nginx-module/src/ngx_http_lua_script.c
        3rd/lua-nginx-module/src/ngx_http_lua_semaphore.c
        3rd/lua-nginx-module/src/ngx_http_lua_setby.c
        3rd/lua-nginx-module/src/ngx_http_lua_sleep.c
        3rd/lua-nginx-module/src/ngx_http_lua_socket_tcp.c
        3rd/lua-nginx-module/src/ngx_http_lua_socket_udp.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_certby.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_ocsp.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_session_fetchby.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_session_storeby.c
        3rd/lua-nginx-module/src/ngx_http_lua_string.c
        3rd/lua-nginx-module/src/ngx_http_lua_subrequest.c
        3rd/lua-nginx-module/src/ngx_http_lua_time.c
        3rd/lua-nginx-module/src/ngx_http_lua_timer.c
        3rd/lua-nginx-module/src/ngx_http_lua_uri.c
        3rd/lua-nginx-module/src/ngx_http_lua_uthread.c
        3rd/lua-nginx-module/src/ngx_http_lua_util.c
        3rd/lua-nginx-module/src/ngx_http_lua_variable.c
        3rd/lua-nginx-module/src/ngx_http_lua_worker.c

        # rtmp module

        src/core/nginx.c
        src/core/ngx_array.c
        src/core/ngx_buf.c
        src/core/ngx_conf_file.c
        src/core/ngx_connection.c
        src/core/ngx_cpuinfo.c
        src/core/ngx_crc32.c
        src/core/ngx_crypt.c
        src/core/ngx_cycle.c
        src/core/ngx_file.c
        src/core/ngx_hash.c
        src/core/ngx_inet.c
        src/core/ngx_list.c
        src/core/ngx_log.c
        src/core/ngx_md5.c
        src/core/ngx_module.c
        src/core/ngx_murmurhash.c
        src/core/ngx_open_file_cache.c
        src/core/ngx_output_chain.c
        src/core/ngx_palloc.c
        src/core/ngx_parse.c
        src/core/ngx_parse_time.c
        src/core/ngx_proxy_protocol.c
        src/core/ngx_queue.c
        src/core/ngx_radix_tree.c
        src/core/ngx_rbtree.c
        src/core/ngx_regex.c
        src/core/ngx_resolver.c
        src/core/ngx_rwlock.c
        src/core/ngx_sha1.c
        src/core/ngx_shmtx.c
        src/core/ngx_slab.c
        src/core/ngx_spinlock.c
        src/core/ngx_string.c
        src/core/ngx_syslog.c
        src/core/ngx_thread_pool.c
        src/core/ngx_times.c
        src/event/modules/ngx_devpoll_module.c
        src/event/modules/ngx_epoll_module.c
        src/event/modules/ngx_eventport_module.c
        src/event/modules/ngx_iocp_module.c
        src/event/modules/ngx_kqueue_module.c
        src/event/modules/ngx_poll_module.c
        src/event/modules/ngx_select_module.c
        src/event/modules/ngx_win32_poll_module.c
        src/event/modules/ngx_win32_select_module.c
        src/event/ngx_event.c
        src/event/ngx_event_accept.c
        src/event/ngx_event_acceptex.c
        src/event/ngx_event_connect.c
        src/event/ngx_event_connectex.c
        src/event/ngx_event_openssl.c
        src/event/ngx_event_openssl_stapling.c
        src/event/ngx_event_pipe.c
        src/event/ngx_event_posted.c
        src/event/ngx_event_timer.c
        src/event/ngx_event_udp.c
        src/http/modules/perl/Makefile.PL
        src/http/modules/perl/nginx.pm
        src/http/modules/perl/nginx.xs
        src/http/modules/perl/ngx_http_perl_module.c
        src/http/modules/perl/typemap
        src/http/modules/ngx_http_access_module.c
        src/http/modules/ngx_http_addition_filter_module.c
        src/http/modules/ngx_http_auth_basic_module.c
        src/http/modules/ngx_http_auth_request_module.c
        src/http/modules/ngx_http_autoindex_module.c
        src/http/modules/ngx_http_browser_module.c
        src/http/modules/ngx_http_charset_filter_module.c
        src/http/modules/ngx_http_chunked_filter_module.c
        src/http/modules/ngx_http_dav_module.c
        src/http/modules/ngx_http_degradation_module.c
        src/http/modules/ngx_http_empty_gif_module.c
        src/http/modules/ngx_http_fastcgi_module.c
        src/http/modules/ngx_http_flv_module.c
        src/http/modules/ngx_http_geo_module.c
        src/http/modules/ngx_http_geoip_module.c
        src/http/modules/ngx_http_grpc_module.c
        src/http/modules/ngx_http_gunzip_filter_module.c
        src/http/modules/ngx_http_gzip_filter_module.c
        src/http/modules/ngx_http_gzip_static_module.c
        src/http/modules/ngx_http_headers_filter_module.c
        src/http/modules/ngx_http_image_filter_module.c
        src/http/modules/ngx_http_index_module.c
        src/http/modules/ngx_http_limit_conn_module.c
        src/http/modules/ngx_http_limit_req_module.c
        src/http/modules/ngx_http_log_module.c
        src/http/modules/ngx_http_map_module.c
        src/http/modules/ngx_http_memcached_module.c
        src/http/modules/ngx_http_mirror_module.c
        src/http/modules/ngx_http_mp4_module.c
        src/http/modules/ngx_http_not_modified_filter_module.c
        src/http/modules/ngx_http_proxy_module.c
        src/http/modules/ngx_http_random_index_module.c
        src/http/modules/ngx_http_range_filter_module.c
        src/http/modules/ngx_http_realip_module.c
        src/http/modules/ngx_http_referer_module.c
        src/http/modules/ngx_http_rewrite_module.c
        src/http/modules/ngx_http_scgi_module.c
        src/http/modules/ngx_http_secure_link_module.c
        src/http/modules/ngx_http_slice_filter_module.c
        src/http/modules/ngx_http_split_clients_module.c
        src/http/modules/ngx_http_ssi_filter_module.c
        src/http/modules/ngx_http_ssl_module.c
        src/http/modules/ngx_http_static_module.c
        src/http/modules/ngx_http_stub_status_module.c
        src/http/modules/ngx_http_sub_filter_module.c
        src/http/modules/ngx_http_try_files_module.c
        src/http/modules/ngx_http_upstream_hash_module.c
        src/http/modules/ngx_http_upstream_ip_hash_module.c
        src/http/modules/ngx_http_upstream_keepalive_module.c
        src/http/modules/ngx_http_upstream_least_conn_module.c
        src/http/modules/ngx_http_upstream_random_module.c
        src/http/modules/ngx_http_upstream_zone_module.c
        src/http/modules/ngx_http_userid_filter_module.c
        src/http/modules/ngx_http_uwsgi_module.c
        src/http/modules/ngx_http_xslt_filter_module.c
        src/http/v2/ngx_http_v2.c
        src/http/v2/ngx_http_v2_encode.c
        src/http/v2/ngx_http_v2_filter_module.c
        src/http/v2/ngx_http_v2_huff_decode.c
        src/http/v2/ngx_http_v2_huff_encode.c
        src/http/v2/ngx_http_v2_module.c
        src/http/v2/ngx_http_v2_table.c
        src/http/ngx_http.c
        src/http/ngx_http_copy_filter_module.c
        src/http/ngx_http_core_module.c
        src/http/ngx_http_file_cache.c
        src/http/ngx_http_header_filter_module.c
        src/http/ngx_http_parse.c
        src/http/ngx_http_postpone_filter_module.c
        src/http/ngx_http_request.c
        src/http/ngx_http_request_body.c
        src/http/ngx_http_script.c
        src/http/ngx_http_special_response.c
        src/http/ngx_http_upstream.c
        src/http/ngx_http_upstream_round_robin.c
        src/http/ngx_http_variables.c
        src/http/ngx_http_write_filter_module.c
        src/mail/ngx_mail.c
        src/mail/ngx_mail_auth_http_module.c
        src/mail/ngx_mail_core_module.c
        src/mail/ngx_mail_handler.c
        src/mail/ngx_mail_imap_handler.c
        src/mail/ngx_mail_imap_module.c
        src/mail/ngx_mail_parse.c
        src/mail/ngx_mail_pop3_handler.c
        src/mail/ngx_mail_pop3_module.c
        src/mail/ngx_mail_proxy_module.c
        src/mail/ngx_mail_smtp_handler.c
        src/mail/ngx_mail_smtp_module.c
        src/mail/ngx_mail_ssl_module.c
        src/os/unix/ngx_alloc.c
        src/os/unix/ngx_channel.c
        src/os/unix/ngx_daemon.c
        src/os/unix/ngx_darwin_init.c
        src/os/unix/ngx_darwin_sendfile_chain.c
        src/os/unix/ngx_dlopen.c
        src/os/unix/ngx_errno.c
        src/os/unix/ngx_file_aio_read.c
        src/os/unix/ngx_files.c
        src/os/unix/ngx_freebsd_init.c
        src/os/unix/ngx_freebsd_sendfile_chain.c
        src/os/unix/ngx_linux_aio_read.c
        src/os/unix/ngx_linux_init.c
        src/os/unix/ngx_linux_sendfile_chain.c
        src/os/unix/ngx_posix_init.c
        src/os/unix/ngx_process.c
        src/os/unix/ngx_process_cycle.c
        src/os/unix/ngx_readv_chain.c
        src/os/unix/ngx_recv.c
        src/os/unix/ngx_send.c
        src/os/unix/ngx_setaffinity.c
        src/os/unix/ngx_setproctitle.c
        src/os/unix/ngx_shmem.c
        src/os/unix/ngx_socket.c
        src/os/unix/ngx_solaris_init.c
        src/os/unix/ngx_solaris_sendfilev_chain.c
        src/os/unix/ngx_sunpro_amd64.il
        src/os/unix/ngx_sunpro_sparc64.il
        src/os/unix/ngx_sunpro_x86.il
        src/os/unix/ngx_thread_cond.c
        src/os/unix/ngx_thread_id.c
        src/os/unix/ngx_thread_mutex.c
        src/os/unix/ngx_time.c
        src/os/unix/ngx_udp_recv.c
        src/os/unix/ngx_udp_send.c
        src/os/unix/ngx_udp_sendmsg_chain.c
        src/os/unix/ngx_user.c
        src/os/unix/ngx_writev_chain.c
        src/stream/ngx_stream.c
        src/stream/ngx_stream_access_module.c
        src/stream/ngx_stream_core_module.c
        src/stream/ngx_stream_geo_module.c
        src/stream/ngx_stream_geoip_module.c
        src/stream/ngx_stream_handler.c
        src/stream/ngx_stream_limit_conn_module.c
        src/stream/ngx_stream_log_module.c
        src/stream/ngx_stream_map_module.c
        src/stream/ngx_stream_proxy_module.c
        src/stream/ngx_stream_realip_module.c
        src/stream/ngx_stream_return_module.c
        src/stream/ngx_stream_script.c
        src/stream/ngx_stream_split_clients_module.c
        src/stream/ngx_stream_ssl_module.c
        src/stream/ngx_stream_ssl_preread_module.c
        src/stream/ngx_stream_upstream.c
        src/stream/ngx_stream_upstream_hash_module.c
        src/stream/ngx_stream_upstream_least_conn_module.c
        src/stream/ngx_stream_upstream_random_module.c
        src/stream/ngx_stream_upstream_round_robin.c
        src/stream/ngx_stream_upstream_zone_module.c
        src/stream/ngx_stream_variables.c
        src/stream/ngx_stream_write_filter_module.c)
