cmake_minimum_required(VERSION 3.15)
project(nginx)

set(CMAKE_CXX_STANDARD 14)

include_directories(objs)
include_directories(src/core)
include_directories(src/event)
include_directories(src/event/modules)
include_directories(src/http)
include_directories(src/http/modules)
include_directories(src/http/modules/perl)
include_directories(src/http/v2)
include_directories(src/mail)
include_directories(src/os/unix)
include_directories(src/stream)
include_directories(/usr/local/opt/pcre/include)
include_directories(/usr/local/opt/openssl/include)
# lua module
include_directories(3rd/lua-nginx-module/api)
include_directories(3rd/lua-nginx-module/src)
include_directories(/usr/local/opt/openresty/luajit/include/luajit-2.1)
# rtmp
include_directories(3rd/nginx-rtmp-module)
include_directories(3rd/nginx-rtmp-module/hls)
include_directories(3rd/nginx-rtmp-module/dash)
# njs
include_directories(3rd/njs/src)
include_directories(3rd/njs/build)

add_executable(nginx
        objs/ngx_auto_config.h
        objs/ngx_auto_headers.h
        objs/ngx_modules.c
        # my modules
        3rd/my-modules/nginx-flv-module/ngx_http_flv_module.c
        # 3rd/my-modules/nginx-ncp3-module/ngx_stream_socks5_module.c
        3rd/my-modules/nginx-http-testvariable-module/ngx_http_testvariable_module.c
        3rd/my-modules/nginx-testslab-module/ngx_http_testslab_module.c
        3rd/my-modules/nginx-http-inotify-module/ngx_http_inotify_module.c

        # lua module
        3rd/lua-nginx-module/src/ngx_http_lua_accessby.c
        3rd/lua-nginx-module/src/ngx_http_lua_api.c
        3rd/lua-nginx-module/src/ngx_http_lua_args.c
        3rd/lua-nginx-module/src/ngx_http_lua_balancer.c
        3rd/lua-nginx-module/src/ngx_http_lua_bodyfilterby.c
        3rd/lua-nginx-module/src/ngx_http_lua_cache.c
        3rd/lua-nginx-module/src/ngx_http_lua_capturefilter.c
        3rd/lua-nginx-module/src/ngx_http_lua_clfactory.c
        3rd/lua-nginx-module/src/ngx_http_lua_config.c
        3rd/lua-nginx-module/src/ngx_http_lua_consts.c
        3rd/lua-nginx-module/src/ngx_http_lua_contentby.c
        3rd/lua-nginx-module/src/ngx_http_lua_control.c
        3rd/lua-nginx-module/src/ngx_http_lua_coroutine.c
        3rd/lua-nginx-module/src/ngx_http_lua_ctx.c
        3rd/lua-nginx-module/src/ngx_http_lua_directive.c
        3rd/lua-nginx-module/src/ngx_http_lua_exception.c
        3rd/lua-nginx-module/src/ngx_http_lua_headerfilterby.c
        3rd/lua-nginx-module/src/ngx_http_lua_headers.c
        3rd/lua-nginx-module/src/ngx_http_lua_headers_in.c
        3rd/lua-nginx-module/src/ngx_http_lua_headers_out.c
        3rd/lua-nginx-module/src/ngx_http_lua_initby.c
        3rd/lua-nginx-module/src/ngx_http_lua_initworkerby.c
        3rd/lua-nginx-module/src/ngx_http_lua_input_filters.c
        3rd/lua-nginx-module/src/ngx_http_lua_lex.c
        3rd/lua-nginx-module/src/ngx_http_lua_log.c
        3rd/lua-nginx-module/src/ngx_http_lua_log_ringbuf.c
        3rd/lua-nginx-module/src/ngx_http_lua_logby.c
        3rd/lua-nginx-module/src/ngx_http_lua_misc.c
        3rd/lua-nginx-module/src/ngx_http_lua_module.c
        3rd/lua-nginx-module/src/ngx_http_lua_ndk.c
        3rd/lua-nginx-module/src/ngx_http_lua_output.c
        3rd/lua-nginx-module/src/ngx_http_lua_pcrefix.c
        3rd/lua-nginx-module/src/ngx_http_lua_phase.c
        3rd/lua-nginx-module/src/ngx_http_lua_pipe.c
        3rd/lua-nginx-module/src/ngx_http_lua_regex.c
        3rd/lua-nginx-module/src/ngx_http_lua_req_body.c
        3rd/lua-nginx-module/src/ngx_http_lua_rewriteby.c
        3rd/lua-nginx-module/src/ngx_http_lua_script.c
        3rd/lua-nginx-module/src/ngx_http_lua_semaphore.c
        3rd/lua-nginx-module/src/ngx_http_lua_setby.c
        3rd/lua-nginx-module/src/ngx_http_lua_sleep.c
        3rd/lua-nginx-module/src/ngx_http_lua_socket_tcp.c
        3rd/lua-nginx-module/src/ngx_http_lua_socket_udp.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_certby.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_ocsp.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_session_fetchby.c
        3rd/lua-nginx-module/src/ngx_http_lua_ssl_session_storeby.c
        3rd/lua-nginx-module/src/ngx_http_lua_string.c
        3rd/lua-nginx-module/src/ngx_http_lua_subrequest.c
        3rd/lua-nginx-module/src/ngx_http_lua_time.c
        3rd/lua-nginx-module/src/ngx_http_lua_timer.c
        3rd/lua-nginx-module/src/ngx_http_lua_uri.c
        3rd/lua-nginx-module/src/ngx_http_lua_uthread.c
        3rd/lua-nginx-module/src/ngx_http_lua_util.c
        3rd/lua-nginx-module/src/ngx_http_lua_variable.c
        3rd/lua-nginx-module/src/ngx_http_lua_worker.c

        # rtmp module
        3rd/nginx-rtmp-module/ngx_rtmp_play_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_mp4_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_shared.c
        3rd/nginx-rtmp-module/ngx_rtmp_access_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_auto_push_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_codec_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_live_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_exec_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_record_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_control_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_amf.c
        3rd/nginx-rtmp-module/ngx_rtmp_core_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_bandwidth.c
        3rd/nginx-rtmp-module/ngx_rtmp_receive.c
        3rd/nginx-rtmp-module/ngx_rtmp_bitop.c
        3rd/nginx-rtmp-module/ngx_rtmp_relay_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_handler.c
        3rd/nginx-rtmp-module/ngx_rtmp_handshake.c
        3rd/nginx-rtmp-module/ngx_rtmp_eval.c
        3rd/nginx-rtmp-module/ngx_rtmp_log_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_send.c
        3rd/nginx-rtmp-module/ngx_rtmp_proxy_protocol.c
        3rd/nginx-rtmp-module/ngx_rtmp_limit_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_netcall_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_cmd_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_stat_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_notify_module.c
        3rd/nginx-rtmp-module/ngx_rtmp_init.c
        3rd/nginx-rtmp-module/ngx_rtmp_flv_module.c
        3rd/nginx-rtmp-module/ngx_rtmp.c
        3rd/nginx-rtmp-module/hls/ngx_rtmp_mpegts.c
        3rd/nginx-rtmp-module/hls/ngx_rtmp_hls_module.c
        3rd/nginx-rtmp-module/dash/ngx_rtmp_mp4.c
        3rd/nginx-rtmp-module/dash/ngx_rtmp_dash_module.c

        # njs
        3rd/njs/nginx/ngx_http_js_module.c
        3rd/njs/nginx/ngx_stream_js_module.c
        3rd/njs/src/njs_arr.c
        3rd/njs/src/njs_array.c
        3rd/njs/src/njs_array_buffer.c
        3rd/njs/src/njs_boolean.c
        3rd/njs/src/njs_chb.c
        3rd/njs/src/njs_crypto.c
        3rd/njs/src/njs_date.c
        3rd/njs/src/njs_disassembler.c
        3rd/njs/src/njs_djb_hash.c
        3rd/njs/src/njs_dtoa.c
        3rd/njs/src/njs_dtoa_fixed.c
        3rd/njs/src/njs_error.c
        3rd/njs/src/njs_event.c
        3rd/njs/src/njs_extern.c
        3rd/njs/src/njs_file.c
        3rd/njs/src/njs_fs.c
        3rd/njs/src/njs_function.c
        3rd/njs/src/njs_generator.c
        3rd/njs/src/njs_json.c
        3rd/njs/src/njs_lexer.c
        3rd/njs/src/njs_lexer_keyword.c
        3rd/njs/src/njs_lvlhsh.c
        3rd/njs/src/njs_malloc.c
        3rd/njs/src/njs_math.c
        3rd/njs/src/njs_md5.c
        3rd/njs/src/njs_module.c
        3rd/njs/src/njs_mp.c
        3rd/njs/src/njs_murmur_hash.c
        3rd/njs/src/njs_number.c
        3rd/njs/src/njs_object.c
        3rd/njs/src/njs_object_prop.c
        3rd/njs/src/njs_parser.c
        3rd/njs/src/njs_parser_expression.c
        3rd/njs/src/njs_parser_terminal.c
        3rd/njs/src/njs_pcre.c
        3rd/njs/src/njs_promise.c
        3rd/njs/src/njs_queue.c
        3rd/njs/src/njs_random.c
        3rd/njs/src/njs_rbtree.c
        3rd/njs/src/njs_regexp.c
        3rd/njs/src/njs_sha1.c
        3rd/njs/src/njs_sha2.c
        3rd/njs/src/njs_shell.c
        3rd/njs/src/njs_sprintf.c
        3rd/njs/src/njs_string.c
        3rd/njs/src/njs_strtod.c
        3rd/njs/src/njs_symbol.c
        3rd/njs/src/njs_time.c
        3rd/njs/src/njs_trace.c
        3rd/njs/src/njs_typed_array.c
        3rd/njs/src/njs_utf8.c
        3rd/njs/src/njs_value.c
        3rd/njs/src/njs_variable.c
        3rd/njs/src/njs_vm.c
        3rd/njs/src/njs_vmcode.c

        # nginx core
        src/core/nginx.c
        src/core/ngx_array.c
        src/core/ngx_buf.c
        src/core/ngx_conf_file.c
        src/core/ngx_connection.c
        src/core/ngx_cpuinfo.c
        src/core/ngx_crc32.c
        src/core/ngx_crypt.c
        src/core/ngx_cycle.c
        src/core/ngx_file.c
        src/core/ngx_hash.c
        src/core/ngx_inet.c
        src/core/ngx_list.c
        src/core/ngx_log.c
        src/core/ngx_md5.c
        src/core/ngx_module.c
        src/core/ngx_murmurhash.c
        src/core/ngx_open_file_cache.c
        src/core/ngx_output_chain.c
        src/core/ngx_palloc.c
        src/core/ngx_parse.c
        src/core/ngx_parse_time.c
        src/core/ngx_proxy_protocol.c
        src/core/ngx_queue.c
        src/core/ngx_radix_tree.c
        src/core/ngx_rbtree.c
        src/core/ngx_regex.c
        src/core/ngx_resolver.c
        src/core/ngx_rwlock.c
        src/core/ngx_sha1.c
        src/core/ngx_shmtx.c
        src/core/ngx_slab.c
        src/core/ngx_spinlock.c
        src/core/ngx_string.c
        src/core/ngx_syslog.c
        src/core/ngx_thread_pool.c
        src/core/ngx_times.c
        # nginx event
        src/event/modules/ngx_devpoll_module.c
        src/event/modules/ngx_epoll_module.c
        src/event/modules/ngx_eventport_module.c
        src/event/modules/ngx_iocp_module.c
        src/event/modules/ngx_kqueue_module.c
        src/event/modules/ngx_poll_module.c
        src/event/modules/ngx_select_module.c
        src/event/modules/ngx_win32_poll_module.c
        src/event/modules/ngx_win32_select_module.c
        src/event/ngx_event.c
        src/event/ngx_event_accept.c
        src/event/ngx_event_acceptex.c
        src/event/ngx_event_connect.c
        src/event/ngx_event_connectex.c
        src/event/ngx_event_openssl.c
        src/event/ngx_event_openssl_stapling.c
        src/event/ngx_event_pipe.c
        src/event/ngx_event_posted.c
        src/event/ngx_event_timer.c
        src/event/ngx_event_udp.c
        # nginx http
        src/http/modules/perl/ngx_http_perl_module.c
        src/http/modules/ngx_http_access_module.c
        src/http/modules/ngx_http_addition_filter_module.c
        src/http/modules/ngx_http_auth_basic_module.c
        src/http/modules/ngx_http_auth_request_module.c
        src/http/modules/ngx_http_autoindex_module.c
        src/http/modules/ngx_http_browser_module.c
        src/http/modules/ngx_http_charset_filter_module.c
        src/http/modules/ngx_http_chunked_filter_module.c
        src/http/modules/ngx_http_dav_module.c
        src/http/modules/ngx_http_degradation_module.c
        src/http/modules/ngx_http_empty_gif_module.c
        src/http/modules/ngx_http_fastcgi_module.c
        src/http/modules/ngx_http_flv_module.c
        src/http/modules/ngx_http_geo_module.c
        src/http/modules/ngx_http_geoip_module.c
        src/http/modules/ngx_http_grpc_module.c
        src/http/modules/ngx_http_gunzip_filter_module.c
        src/http/modules/ngx_http_gzip_filter_module.c
        src/http/modules/ngx_http_gzip_static_module.c
        src/http/modules/ngx_http_headers_filter_module.c
        src/http/modules/ngx_http_image_filter_module.c
        src/http/modules/ngx_http_index_module.c
        src/http/modules/ngx_http_limit_conn_module.c
        src/http/modules/ngx_http_limit_req_module.c
        src/http/modules/ngx_http_log_module.c
        src/http/modules/ngx_http_map_module.c
        src/http/modules/ngx_http_memcached_module.c
        src/http/modules/ngx_http_mirror_module.c
        src/http/modules/ngx_http_mp4_module.c
        src/http/modules/ngx_http_not_modified_filter_module.c
        src/http/modules/ngx_http_proxy_module.c
        src/http/modules/ngx_http_random_index_module.c
        src/http/modules/ngx_http_range_filter_module.c
        src/http/modules/ngx_http_realip_module.c
        src/http/modules/ngx_http_referer_module.c
        src/http/modules/ngx_http_rewrite_module.c
        src/http/modules/ngx_http_scgi_module.c
        src/http/modules/ngx_http_secure_link_module.c
        src/http/modules/ngx_http_slice_filter_module.c
        src/http/modules/ngx_http_split_clients_module.c
        src/http/modules/ngx_http_ssi_filter_module.c
        src/http/modules/ngx_http_ssl_module.c
        src/http/modules/ngx_http_static_module.c
        src/http/modules/ngx_http_stub_status_module.c
        src/http/modules/ngx_http_sub_filter_module.c
        src/http/modules/ngx_http_try_files_module.c
        src/http/modules/ngx_http_upstream_hash_module.c
        src/http/modules/ngx_http_upstream_ip_hash_module.c
        src/http/modules/ngx_http_upstream_keepalive_module.c
        src/http/modules/ngx_http_upstream_least_conn_module.c
        src/http/modules/ngx_http_upstream_random_module.c
        src/http/modules/ngx_http_upstream_zone_module.c
        src/http/modules/ngx_http_userid_filter_module.c
        src/http/modules/ngx_http_uwsgi_module.c
        src/http/modules/ngx_http_xslt_filter_module.c
        src/http/v2/ngx_http_v2.c
        src/http/v2/ngx_http_v2_encode.c
        src/http/v2/ngx_http_v2_filter_module.c
        src/http/v2/ngx_http_v2_huff_decode.c
        src/http/v2/ngx_http_v2_huff_encode.c
        src/http/v2/ngx_http_v2_module.c
        src/http/v2/ngx_http_v2_table.c
        src/http/ngx_http.c
        src/http/ngx_http_copy_filter_module.c
        src/http/ngx_http_core_module.c
        src/http/ngx_http_file_cache.c
        src/http/ngx_http_header_filter_module.c
        src/http/ngx_http_parse.c
        src/http/ngx_http_postpone_filter_module.c
        src/http/ngx_http_request.c
        src/http/ngx_http_request_body.c
        src/http/ngx_http_script.c
        src/http/ngx_http_special_response.c
        src/http/ngx_http_upstream.c
        src/http/ngx_http_upstream_round_robin.c
        src/http/ngx_http_variables.c
        src/http/ngx_http_write_filter_module.c
        # nginx mail
        src/mail/ngx_mail.c
        src/mail/ngx_mail_auth_http_module.c
        src/mail/ngx_mail_core_module.c
        src/mail/ngx_mail_handler.c
        src/mail/ngx_mail_imap_handler.c
        src/mail/ngx_mail_imap_module.c
        src/mail/ngx_mail_parse.c
        src/mail/ngx_mail_pop3_handler.c
        src/mail/ngx_mail_pop3_module.c
        src/mail/ngx_mail_proxy_module.c
        src/mail/ngx_mail_smtp_handler.c
        src/mail/ngx_mail_smtp_module.c
        src/mail/ngx_mail_ssl_module.c
        # nginx os-related
        src/os/unix/ngx_alloc.c
        src/os/unix/ngx_channel.c
        src/os/unix/ngx_daemon.c
        src/os/unix/ngx_darwin_init.c
        src/os/unix/ngx_darwin_sendfile_chain.c
        src/os/unix/ngx_dlopen.c
        src/os/unix/ngx_errno.c
        src/os/unix/ngx_file_aio_read.c
        src/os/unix/ngx_files.c
        src/os/unix/ngx_freebsd_init.c
        src/os/unix/ngx_freebsd_sendfile_chain.c
        src/os/unix/ngx_linux_aio_read.c
        src/os/unix/ngx_linux_init.c
        src/os/unix/ngx_linux_sendfile_chain.c
        src/os/unix/ngx_posix_init.c
        src/os/unix/ngx_process.c
        src/os/unix/ngx_process_cycle.c
        src/os/unix/ngx_readv_chain.c
        src/os/unix/ngx_recv.c
        src/os/unix/ngx_send.c
        src/os/unix/ngx_setaffinity.c
        src/os/unix/ngx_setproctitle.c
        src/os/unix/ngx_shmem.c
        src/os/unix/ngx_socket.c
        src/os/unix/ngx_solaris_init.c
        src/os/unix/ngx_solaris_sendfilev_chain.c
        src/os/unix/ngx_sunpro_amd64.il
        src/os/unix/ngx_sunpro_sparc64.il
        src/os/unix/ngx_sunpro_x86.il
        src/os/unix/ngx_thread_cond.c
        src/os/unix/ngx_thread_id.c
        src/os/unix/ngx_thread_mutex.c
        src/os/unix/ngx_time.c
        src/os/unix/ngx_udp_recv.c
        src/os/unix/ngx_udp_send.c
        src/os/unix/ngx_udp_sendmsg_chain.c
        src/os/unix/ngx_user.c
        src/os/unix/ngx_writev_chain.c
        # nginx stream
        src/stream/ngx_stream.c
        src/stream/ngx_stream_access_module.c
        src/stream/ngx_stream_core_module.c
        src/stream/ngx_stream_geo_module.c
        src/stream/ngx_stream_geoip_module.c
        src/stream/ngx_stream_handler.c
        src/stream/ngx_stream_limit_conn_module.c
        src/stream/ngx_stream_log_module.c
        src/stream/ngx_stream_map_module.c
        src/stream/ngx_stream_proxy_module.c
        src/stream/ngx_stream_realip_module.c
        src/stream/ngx_stream_return_module.c
        src/stream/ngx_stream_script.c
        src/stream/ngx_stream_split_clients_module.c
        src/stream/ngx_stream_ssl_module.c
        src/stream/ngx_stream_ssl_preread_module.c
        src/stream/ngx_stream_upstream.c
        src/stream/ngx_stream_upstream_hash_module.c
        src/stream/ngx_stream_upstream_least_conn_module.c
        src/stream/ngx_stream_upstream_random_module.c
        src/stream/ngx_stream_upstream_round_robin.c
        src/stream/ngx_stream_upstream_zone_module.c
        src/stream/ngx_stream_variables.c
        src/stream/ngx_stream_write_filter_module.c)
